# botbase

./: .env_example  .gitignore  app.json  bot.py  config.env_example  config.py  constructors.py  database.py  login.py  pyproject.toml  requirements-sqlite.txt  requirements.txt  utils.py  waiters.py
handlers/: language.py
handlers/callback_query/: about.py  any.py  help.py  start.py
handlers/message/: about.py  any.py  help.py  name.py  start.py
handlers/message/sudoers/: cmd.py  evals.py  execs.py
plugins/: waiter_resolve.py
plugins/callback_query/: about.py  any.py  help.py  start.py
plugins/message/: about.py  any.py  help.py  name.py  start.py
plugins/message/sudoers/: cmd.py  eval.py  evals.py  execs.py
strings/: en.yml  pt.yml  sync
